--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.volantx</groupId>
     <artifactId>webparser</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>webparser</name>
 
 
     <parent>
