--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>${springfox-swagger.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>${project.name}</finalName>
