--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ logging:
 
 selenium:
   webdriver:
-    chrome: ${user.home}/Downloads/chromedriver
+    chrome: ${user.home}/chromedriver
 
 snap:
   save:
